--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "clouderp-simplebooks",
   "private": true,
-  "type": "module",
+  "workspaces": [
+    "apps/api",
+    "apps/web"
+  ],
   "scripts": {
-    "start": "node apps/api/src/server.js",
-    "test": "node --test"
+    "build": "npm run build --workspaces",
+    "dev": "npm run dev --workspaces",
+    "lint": "npm run lint --workspaces",
+    "test": "npm run test --workspaces"
   }
 }
