--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
     "test": "vitest run",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
-    "prisma:seed": "ts-node --project tsconfig.json --esm ../prisma/seed.ts"
+    "prisma:seed": "ts-node --project ../prisma/tsconfig.json --esm ../prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
