--- a/prisma/tsconfig.json
+++ b/prisma/tsconfig.json
@@ -8,9 +8,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist",
-    "rootDir": "src",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["node"]
   },
-  "include": ["src/**/*.ts"]
+  "include": ["seed.ts"]
 }
