--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,9 +8,9 @@
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
     "test": "vitest run",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy",
-    "prisma:seed": "ts-node --project ../prisma/tsconfig.json --esm ../prisma/seed.ts"
+    "prisma:generate": "prisma generate --schema ../../prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate deploy --schema ../../prisma/schema.prisma",
+    "prisma:seed": "ts-node --project ../../prisma/tsconfig.json --esm ../../prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
@@ -44,5 +44,8 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
+  },
+  "prisma": {
+    "schema": "../../prisma/schema.prisma"
   }
 }
