--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
     "test": "vitest run",
     "prisma:generate": "prisma generate --schema ../../prisma/schema.prisma",
     "prisma:migrate": "prisma migrate deploy --schema ../../prisma/schema.prisma",
-    "prisma:seed": "ts-node --project ../../prisma/tsconfig.json --esm ../../prisma/seed.ts"
+    "prisma:seed": "ts-node --project ../../prisma/tsconfig.json ../../prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
