Fix internal API proxy configuration

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@ PRISMA_HIDE_UPDATE_MESSAGE=1
 PRISMA_DISABLE_TELEMETRY=1
 
 # WEB
+INTERNAL_API_URL=http://localhost:5010
 NEXT_PUBLIC_API_URL=http://localhost:5010
